--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -10,7 +10,7 @@ Is there missing information from the daily practice of a trained musician to an
 
 The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze to integrate natural musical expression via movement.  
 
-From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely has sought to further explore interstitial design. Through his research he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
+From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely has sought to further explore interstitial design. Through his work he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
 
 This research is an expansion of the existing sensory motor synchronization findings to the haptic modality with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
 
