expanded sanitize window + abstract updates

--- a/Thesis/thesis-abstract.tex
+++ b/Thesis/thesis-abstract.tex
@@ -6,18 +6,13 @@
 
 \noindent
 \listoftodos
-\todo{This is sounding more like an introduction, maybe hold off on the abstract until you have your data results?}
+\pagebreak
 
-The interstice is an intervening space. When applied to a rhythmic context, the interstitial beat can be represented by two distinct states; whether energy exists within this small moment in time or if it does not. 
 
-Does filling the space provide an added awareness or preparation for upcoming onsets? Can the gestural motion of the conductor be justified scientifically?
+The following work is an expansion of sensorimotor synchronization research. It provides an evaluation of the intervening space between the beat as it applies to the modalities of touch and sound. The crux of the experiment is a tap test comparison of continuous and discrete impulses over static (isochronous) and dynamic (non-isochronous) intervals. Time based response metrics of a wearable haptic are contrasted to a suite of audible tests. Though vast evidence promotes auditory dominance in guiding rhythmic accuracy and low asynchronicity, the work hypothesizes that there will be improvement shown when the interstitial beat is occupied with a continuous wave across the modality of touch at slower tempi, where space between successive beats is significantly spread apart, as well as throughout the occurrence of unpredictable or dynamically changing events. 
 
-Nevertheless, the underlying question when applied to either the daily practice of a trained musician or the innate entrainment (external rhythmic synchronization) of the average human being, is whether the space between the beat matters.
+The analysis over 10 individuals, professional and amateur/non-musicians resulted in 
 
-The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization test cases spanning the modalities of sound and touch will be conducted across groups of musicians, amateurs, and non-musicians.
+\todo[inline]{add experiment results brief overview}
 
-Ancillary to this work, a haptic wearable is prototyped and evaluated for design optimization with an overarching goal of communicating dynamic changes more effectively.
-
-Although rhythmic accuracy is proven to be most effective through discrete audible means, the work hypothesizes that there will be improvement shown when the interstitial beat is occupied with a continuous wave across the modality of touch at slower tempi, where space between successive beats is significantly spread apart, as well as throughout the occurrence of unpredictable or dynamically changing events. 
-
-Furthermore, the wearable haptic will provide an inconspicuous yet meaningful gestural system key towards future entrainment studies in expressive performance and holds extramusical value in respective medical and military based applications.
+The overarching goal is to inform validity and design of a haptic wearable which seeks to supplant the traditional metronome experience in providing a meaningful gestural system. Though primarily invaluable towards future entrainment studies in expressive performance, the work holds extra-musical value for stroke gait rehabilitation practice, Parkingson's patients, and military based  applications for inconspicuous alerts.
