--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -138,3 +138,33 @@
   url = {https://www.adafruit.com/product/2776},
   urldate = {2018-04-23}
 }
+@article{elliott2009mattap,
+  title={MatTAP: a MATLAB toolbox for the control and analysis of movement synchronisation experiments},
+  author={Elliott, Mark T and Welchman, Andrew E and Wing, Alan M},
+  journal={Journal of neuroscience methods},
+  volume={177},
+  number={1},
+  pages={250--257},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{finney2001ftap,
+  title={FTAP: A Linux-based program for tapping and music experiments},
+  author={Finney, Steven A},
+  journal={Behavior Research Methods, Instruments, \& Computers},
+  volume={33},
+  number={1},
+  pages={65--72},
+  year={2001},
+  publisher={Springer}
+}
+@article{schultz2016tap,
+  title={Tap Arduino: An Arduino microcontroller for low-latency auditory feedback in sensorimotor synchronization experiments},
+  author={Schultz, Benjamin G and van Vugt, Floris T},
+  journal={Behavior research methods},
+  volume={48},
+  number={4},
+  pages={1591--1607},
+  year={2016},
+  publisher={Springer}
+}
