--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -3,13 +3,11 @@
 \chapter{Introduction} \label{secIntro}
 The interstice is an intervening space. When applied to a rhythmic context, the interstitial beat can be represented by two distinct states; whether energy exists within this small moment in time or if it does not. 
 
-Does filling the space provide an added awareness or preparation for upcoming onsets? Can the gestural motion of the conductor be justified scientifically?
+The underlying question, as applied to the daily practice of a trained musician or the innate entrainment (external rhythmic synchronization) of the average human being, is whether the space between the beat matters. Does filling the space provide an added awareness or preparation for upcoming onsets?
 
-Nevertheless, the underlying question when applied to either the daily practice of a trained musician or the innate entrainment (external rhythmic synchronization) of the average human being, is whether the space between the beat matters.
+The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization test cases spanning the modalities of sound and touch is conducted across groups of musicians, amateurs, and non-musicians.
 
-The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization test cases spanning the modalities of sound and touch will be conducted across groups of musicians, amateurs, and non-musicians.
-
-Ancillary to this work, a haptic wearable is prototyped and evaluated for design optimization with an overarching goal of communicating dynamic changes more effectively.
+Ancillary to this work, a haptic wearable is prototyped and evaluated for design optimization with an overarching goal of translating the gestural motion of the conductor in communicating dynamic changes more effectively.
 \section{Motivation}
 While it is clear that nearly every professional musician has honed technique over countless hours of practice to an audible metronome, it is not directly obvious whether he/she has ingrained a true sense of rhythm at the foundational level with the primary instrument of expression, the body itself.
 
@@ -19,9 +17,9 @@ Is there missing information from the daily practice of a trained musician to an
 
 The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze to integrate natural musical expression via movement.  
 
-From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely has sought to further explore interstitial design. Through his work he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
+From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely has been a firsthand witness to the power of full body integration of rhythm and through his current research in design seeks to further explore the interstitial. He imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
 
-This research is an expansion of the existing sensory motor synchronization findings to the haptic modality with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
+This research is an expansion of the existing sensorymotor synchronization findings to the haptic modality with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
 
 \section{Background}
 \subsection{Brief metronome history}
