+writing, data analysis

--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -168,3 +168,9 @@
   year={2016},
   publisher={Springer}
 }
+@book{jaques1930eurhythmics,
+  title={Eurhythmics, art, and education},
+  author={Jaques-Dalcroze, Emile},
+  year={1930},
+  publisher={Arno Pr}
+}
