--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -5,41 +5,31 @@ The interstice is an intervening space. When applied to a rhythmic context, the 
 
 The underlying question, as applied to the daily practice of a trained musician or the innate entrainment (external rhythmic synchronization) of the average human being, is whether the space between the beat matters. Does filling the space provide an added awareness or preparation for upcoming onsets?
 
-The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization test cases spanning the modalities of sound and touch is conducted across groups of musicians, amateurs, and non-musicians.
+The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization tests spanning the modalities of sound and touch are conducted across groups of musicians, amateurs, and non-musicians.
 
 Ancillary to this work, a haptic wearable is prototyped and evaluated for design optimization with an overarching goal of translating the gestural motion of the conductor in communicating dynamic changes more effectively.
+
 \section{Motivation}
+In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However this representation is only half of the puzzle since the pendulum motion exhibited seeks to convey meaningful rhythmic information through the visual, much like the gestural motion of a conductor.
+
 While it is clear that nearly every professional musician has honed technique over countless hours of practice to an audible metronome, it is not directly obvious whether he/she has ingrained a true sense of rhythm at the foundational level with the primary instrument of expression, the body itself.
 
 Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexposed to a student in training. Yet this ability, to perform in the spaces surrounding the beat, defines the difference between a rigid performance and one that flows with an elasticity and musical expression.
 
 Is there missing information from the daily practice of a trained musician to an audible metronome? Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy.''\cite{fitts2008new}
 
-The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze to integrate natural musical expression via movement.  
+The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. The participants arm could, for example, be conducting to a subdivision played in the melody while simultaneously coordinating walking to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the musicians actions allowing an embodiment of continuity which seeks to translate to all elements of an artists musicality.
 
-From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely has been a firsthand witness to the power of full body integration of rhythm and through his current research in design seeks to further explore the interstitial. He imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
+From nearly two decades of work as a licensed Dalcroze instructor at Carnegie Mellon University, Professor Stephen Neely has implemented these techniques. His current research in design seeks to further explore the interstitial. In doing so he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
 
-This research is an expansion of the existing sensorymotor synchronization findings to the haptic modality with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
-
-\section{Background}
-\subsection{Brief metronome history}
-
-In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However this representation is only half of the puzzle since the pendulum motion exhibited seeks to convey meaningful rhythmic information through the visual , much like the gestural motion of a conductor.
-
-\subsection{The conductor}
-
-The conductor ``fills 100\% of the space between the crusis (the “click” moments of a beat) with a natural analogue wave that provides the build-up and decay common to natural happenings.''[Haptic Enviro-Sensing Metronome, 5]
-
-\subsection{Jacques Dalcroze}
-
-\subsection{Entrainment}
+\section{Sensorimotor synchronization}
+\subsubsection{Entrainment}
 
 Humans are one of the few species who exhibit the ability to synchronize to a beat. From a neurological perspective, it has been thought to be connected with the capacity for vocal learning. [CITE]
 
 \verb!REWORD THIS!:!
 The capacity to entrain motor behaviors to a beat is predictive (i.e., on average, taps slightly precede event onsets when tapping to a beat) and flexible (i.e., synchronization to an auditory beat is accurate for inter-beat intervals ranging from 300 to 900ms, with the most preferred inter-beat intervals being approximately 600ms).~\cite{repp2013sensorimotor}
 
-\subsection{The field of sensorimotor synchronization}
 The realm of research surrounding the psychology of rhythm is grounded within the framework of \textit{sensorimotor synchronization} (\textit{SMS}); defined as the coordination of rhythmic movement to an external rhythm. 
 
 \textbf{NOT IMPORTANT? SMS studies, conducted by Van Noorden and De Bruyn, of 600 children aged 3-11 has shown that adaptation to tempo was evident from 5 years and up. \cite{repp2013sensorimotor} }
@@ -47,3 +37,31 @@ The realm of research surrounding the psychology of rhythm is grounded within th
 SMS research historically identifies what is known as an auditory advantage, or the dominance of auditory/motor connection within the task of beat synchronization. The auditory advantage is discussed in detail in \verb!Section 2.1!. However, recent studies have proven given meaningful spatiotemporal information, as in the bouncing ball example discussed in \verb!Section 2.2!, synchronization is almost as good as an auditory metronome.
 
 This work will focus on the expansion of this claim into the tactile realm, hypothesizing that:
+
+This research is an expansion of the existing sensorimotor synchronization findings to the haptic modality with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
+
+What follows is a brief overview of SMS. A primer on available tap test software \ref{ttsw} is followed by a detail of critical terminology \ref{SMSTerms}. Last, foundational framework of the current work is established by exploring relevant research within the field \ref{SMSFindings}.
+
+\subsection{Tap Test Software} \label{ttsw}
+Due to the reliability, precision \textit{(ms)}, and discrete nature, the finger tap mechanism holds traditional precedence in SMS research. As such the experiments in this project follow suit. Studies predominantly rely on a MIDI based (drum pad) instrument to register tap events and provide some sort of auditory feedback. A few tap based software suites for experimentation and data acquisition are readily available: a Linux based system written by Finney in 2001 named \textit{FTAP} \cite{finney2001ftap}, and a \textit{Matlab} based toolbox by Elliot in 2009 called \textit{MatTAP} \cite{elliott2009mattap}. FTAP relied on a MIDI source and had a reported mean auditory latency of approximately 14.6ms (SD = 2.8) \cite{schultz2016tap}. Furthermore, superfluous and unregistered taps were common.
+Both \textit{FTAP} and \textit{MatTap} were experimented with as viable options for this work but ultimately deemed either outmoded, lacking high baudrate (115200) hardware support for haptic integration over serial, or incompatible with the system architecture in use \textit{(OSX 10.11.6 2.6GHz Intel I7)}.
+
+In a novel high-precision/low-latency approach by Prof. Schultz in 2015 at the University of Montreal \cite{schultz2016tap}, an Arduino force sensitive resistor (FSR) based tap mechanism was constructed. Round-trip latency between tap and auditory feedback was minimized with a mean of 0.6ms (SD = 0.3). The results also demonstrated the reliability of the FSR in recording fewer superfluous taps as well as fewer missed taps.
+It was inevitably decided to construct a custom software suite to fit the test needs of the project as discussed in Section \ref{development}.
+
+\subsection{Terminology} \label{SMSTerms}
+The main method of data collection for SMS tap based tests involve collection of the time delta between the tap and event onset, called the \textit{asynchrony}. The mean of the asynchonies is typically negative (\textit{NMA}), indicative of the participants anticipation of the beat rather than reaction. Positive asynchonies within the shortest reaction time window (150 ms) are arguably an anticipation of the preceeding stimuli. The standard deviation of the asynchrony $(SD_{asy})$ is an index of stability; lower values indicative of a better synchronization.  \cite{repp2013sensorimotor}
+
+Other important metrics include the variability and mean of the inter tap interval (\textit{ITI}) and the inter onset interval (\textit{IOI}), or the time between successive beats - measured in milliseconds. Mismatch between the ITI and IOI implies poor synchronization skill from the participant. 
+
+When a participant is instructed to tap on the beat, this is termed 1:1 synchronization. 4:1 synchronization, for example, is a beat subdivided into four with one tap on the beat. Subdivision tests typically yield lower mean $(SD_{asy})$ values. \cite{repp2013sensorimotor}
+
+\subsection{Findings} \label{SMSFindings}
+Professional musicians exhibit a lower ITI variability with percussionists as well as pianists. Surprisingly, both amateurs and non-musicians had no $SD_{asy}$ difference. From a paper presented at the Music Perception and Cognition in 2012:
+\begin{quotation}
+    Stoklasa, Liebermann, and Fischinger reported that musicians playing their own brass or string instrument in synchrony with a metronome showed a negligible NMA (–2 ms), unlike their tapping (–13 ms). \cite{repp2013sensorimotor}
+\end{quotation}
+
+Furthermore, as the duration of the IOI increases, or slower beats per minute, $(SD_{asy})$ increased in a non linear fashion. 
+
+Isochronous vs. nonisochronous ~\cite{polak2016both}
