--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -174,3 +174,22 @@
   year={1930},
   publisher={Arno Pr}
 }
+@article{keele1985perception,
+  title={Do perception and motor production share common timing mechanisms: A correlational analysis},
+  author={Keele, Steven W and Pokorny, Robert A and Corcos, Daniel M and Ivry, Richard},
+  journal={Acta psychologica},
+  volume={60},
+  number={2-3},
+  pages={173--191},
+  year={1985},
+  publisher={Elsevier}
+}
+@article{repp2006rate,
+  title={Rate limits of sensorimotor synchronization},
+  author={Repp, Bruno H},
+  journal={Advances in Cognitive Psychology},
+  volume={2},
+  number={2-3},
+  pages={163--181},
+  year={2006}
+}
