--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -173,7 +173,7 @@ Sources of potential error:
 
     Evaluation with scope:
 
-\subsection{Setup}
+\subsection{Setup} \label{testSetup}
 
 To initialize setup, the user is seated and given a pair of closed-back headphones. The FSR is situated to their preference, either dominant or non-dominant hand, and secured into place. Unlike a keyboard or button the FSR gives no feedback or rebound;psychologically ensuring a confident tap on each onset while providing no tactile response. This approach avoids intrinsic lag as there are no mechanical components involved. The delay limit is defined by the threshold applied in the software to avoid debounce, as discussed in Section \ref{}
 
